# orion

./: .gitignore  README.md  dockerfile  pyproject.toml
.github/workflows/: dockerhub.yml  main-publish.yml  release-ci-automerge.yml  test-ci.yml
orion/: .dockerignore  config.py  logging.py  main.py
orion/agent/: agent.py  helper.py  history.py  memory.py
orion/api/v1/: auth.py
orion/api/v1/agent/: routes.py
orion/api/v1/knowledge/: routes.py
orion/tools/: knowledge.py
scripts/: init.sh
tests/: conftest.py  test_agent_module.py  test_api.py  test_knowledge.py
